<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, XiaoHeiDemoActivity!</string>
 	<string name="app_name">小黑测试</string>    
    <string name="app_name_move">小黑测试转盘</string>
    <string name="app_name_circle">小黑测试扇形</string>
    <string name="pop_menu">弹出菜单</string>
    <string name="cancle_menu">取消菜单</string>
    <string name="str_text1">str_text1</string>
    <string name="str_text2">str_text2</string>
    <string name="str_text3">str_text3</string>
    <string name="str_text4">str_text4</string>
    <string name="str_text5">str_text5</string>
    <string name="str_text6">str_text6</string>
    <string name="menu_right_return">返回</string>
    <string name="menu_right_delete">移除</string>
    <string name="menu_right_details">详情</string>
    <string name="menu_right_lock">加锁</string>
    <string name="menu_right_move">移动</string>
    <string name="menu_right_uninstall">卸载</string>
    <string name="menu_right_rename">命名</string>
    <string name="menu_right_change_ico">换图标</string>    
    
    <drawable name="bkcolor">#ff00ff</drawable>
    
    <color name="white">#ffffffff</color>
    <color name="grey">#ff959595</color>
    <color name="list_divider">#ffd0d5d9</color>
    <string name="net_traffic_no_data">暂无流量排行数据，请稍后查看</string>
    <string name="net_traffic_upload">上传</string>
    <string name="net_traffic_download">下载</string>    
    <string name="net_traffic_data_small">%sK</string>
    <string name="net_traffic_data_big">%sM</string>
    
    <string name="net_traffic_loading">加载中...</string>
    <string name="net_traffic_reading_apps">读取安装的程序</string>    
    
    <string name="net_traffic_bytes_gprs_desc">2G/3G流量</string>    
    <string name="net_traffic_bytes_gprs_day">今日：%s  MB</string>
    <string name="net_traffic_bytes_gprs_month">本月：%s  MB</string>
    <string name="net_traffic_bytes_wifi_desc">wifi流量</string>    
    <string name="net_traffic_bytes_wifi_day">今日：%s  MB</string>
    <string name="net_traffic_bytes_wifi_month">本月：%s  MB</string>
    
    
    <string name="shortcut_slot_choose_title">我想...</string>
    <string name="slot_type_call">直接打电话给他/她</string>
    <string name="slot_type_message">直接发短信给他/她</string>
    <string name="slot_type_app">直接打开最爱的应用</string>
    <string name="slot_type_app_dialog_title">我想直接打开……</string>
    <string name="slot_type_system">直接管理系统</string>
</resources>